# Socket-based-multiplayer-game

./: CMakeLists.txt  README.md  makefile
additional_src/: server_test.cpp
client/: client.cpp  client.h  main.c  main.cpp  parsing_functionalities.cpp  parsing_functionalities.h
crc32/: crc32.c  crc32.h
parsing_functionalities/: parsing_functionalities.cpp
release/: CMakeCache.txt  Makefile  client  cmake_install.cmake  server
release/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
release/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
release/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
server/: event.cpp  event.h  main.cpp  parsing_functionalities.cpp  parsing_functionalities.h  server.cpp  server.h
src/client/: client.cpp  client.h  main.cpp  parsing_functionalities.cpp
src/client2/: Makefile  client.h
src/client2/src/client/: client.cpp  main.cpp
src/client2/src/shared/: client_server_msg.h
src/gui/: gui2.c
src/server/: main.cpp  parsing_functionalities.cpp  parsing_functionalities.h  server.cpp
src/shared_functionalities/: crc32.c  err.h  event.cpp  event.h  parsing_functionalities.cpp  parsing_functionalities.h
src/testClient/: CMakeLists.txt  echo-client.c  echo-server.c
tests/: client_tests.py  move.sh  server_tests.py  test_config.ini  tests_200.py
